--- a/index.html
+++ b/index.html
@@ -1,15 +1,102 @@
 <!--Note:The template file will be copied to a new file. When you change the code of the template file you can create new file with this base code. -->
 <html>
-<head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-<script src="https://kit.fontawesome.com/8b5655bd1d.js" crossorigin="anonymous"></script>
-</head>
-    <body>
-    <div class="d-flex bg-warning">
-        <h1>HelloWord</h1>
-        <p>Hi there<p>
-        <i class="fa-brands fa-instagram"></i>
+  <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/8b5655bd1d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="hero">
+      <p>👋 Hello, I am</p>
+      <h1>Rachel Makwara</h1>
+      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
+    <p class="text-center m-5">Featured Below Are Some Of My Best Projects</p>
+    <div class="container">
+      <div class="row row-gap-5">
+        <div class="col-md-6 d-none d-lg-block">
+          <img
+            src="/images/yoga.png"
+            alt="picture of a lady doing yoga"
+            class="img-fluid"
+          />
         </div>
-    </body>
+        <div class="col-md-6">
+          <h2 class="mb-3 text-start">Yoga Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a
+            class="btn btn-primary btn-lg justify-content-md-start"
+            href="#"
+            role="button"
+            >View Project Details</a
+          >
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-3 text-start">Weather Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a
+            class="btn btn-primary btn-lg justify-content-md-start"
+            href="#"
+            role="button"
+            >View Project Details</a
+          >
+        </div>
+        <div class="col-md-6 d-none d-lg-block">
+          <img
+            src="/images/weather.png"
+            alt="image of a weather app"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6 d-none d-lg-block">
+          <img
+            src="/images/yogurt.png"
+            alt="image of yogurt with berries"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6">
+          <h2 class="mb-3 text-start">Yogurt Project</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <a
+            class="btn btn-primary btn-lg justify-content-md-start"
+            href="#"
+            role="button"
+            >View Project Details</a
+          >
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
