--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Rachel Makwara</h1>
-      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <h2 class="mb-5">Front-end developer based in Zimbabwe</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
